# advent-of-code

./: LICENSE
2022/: .python-version  q10.py  q11.py  q1a.py  q1b.py  q2a.py  q2b.py  q3a.py  q3b.py  q4a.py  q4b.py  q5a.py  q5b.py  q6a.py  q6b.py  q7a.py  q7b.py  q8a.py  q9.py  requirements.txt
2024/: pyproject.toml  q02b.py  q03a.py  q04a.py  q04b.py  q05b.py  q06a.py  q07a.py  q08a.py  q09a.py  q09b.py  q1.py  q10a.py  q10b.py  q11a.py  q11b.py  q12a.py  q12b.py  q13a.py  q13b.py  q14a.py  q14b.py  q1b.py  q2.py  q2b.py  q3b.py  q5a.py  q6b.py  q7b.py  q8b.py  q9b.py
2024/data/: p12.txt  p5-jobs.txt  p5-rules.txt
