[tool.poetry]
name = "mcfunley-advent-2024"
version = "0.1.0"
description = ""
authors = ["Dan McKinley <mcfunley@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.3"
pandas = "^2.2.3"
tqdm = "^4.67.1"
sympy = "^1.13.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
